tests/snapshots/blank_lines/assignment_run_unchanged.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/assignment_run_unchanged.input.py
---

