tests/snapshots/blank_lines/banner_comments.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/banner_comments.input.py
---
blank-lines@238..239
blank-lines@393..394
