tests/snapshots/blank_lines/banner_comments.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/banner_comments.input.py
---
"""
A banner-style block of own-line comments above a def is treated as
a section divider rather than a description of the def, with the
pair's canonical gap above the banner and 1 blank line between the
banner and the def.
"""


def first():
    return 1


# ============================================================
# Section: Auxiliary Helpers
# ============================================================

def second():
    return 2
