tests/snapshots/blank_lines/bare_then_from_collapse.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/bare_then_from_collapse.input.py
---
blank-lines@109..112
