tests/snapshots/blank_lines/bare_then_from_collapse.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/bare_then_from_collapse.input.py
---
"""
A bare `import` followed by a `from` import separated by two blank
lines collapses to one.
"""

import os

from sys import argv
