tests/snapshots/blank_lines/bare_then_from_idempotent.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/bare_then_from_idempotent.input.py
---

