tests/snapshots/blank_lines/bare_then_from_idempotent.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/bare_then_from_idempotent.input.py
---
"""
A bare `import` followed by a `from` import already separated by one
blank line stays at one.
"""

import os

from sys import argv
