tests/snapshots/blank_lines/bare_then_from_insert.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/bare_then_from_insert.input.py
---
blank-lines@150..151
