tests/snapshots/blank_lines/bare_then_from_insert.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/bare_then_from_insert.input.py
---
"""
A bare `import` immediately followed by a `from` import with zero
blank lines between them expands to one blank line of separation.
"""

import os

from sys import argv
