tests/snapshots/blank_lines/bare_then_from_with_comment.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/bare_then_from_with_comment.input.py
---
blank-lines@190..191
blank-lines@201..202
