tests/snapshots/blank_lines/bare_then_from_with_comment.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/bare_then_from_with_comment.input.py
---
"""
An own-line comment between a bare `import` and a following `from`
import surfaces 1 blank line above the comment and 1 blank line
between the comment and the from-import.
"""

import os

# boundary

from sys import argv
